trunk/Archive2/2b/f1b1930260a6ff/output
main.cpp:12:12: error: 'test' does not name a type
 using sum= test;
            ^
main.cpp: In function 'int main()':
main.cpp:16:18: error: 'sum' was not declared in this scope
     sum(val,4,7,6);
                  ^
